<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@mipmap/background"
    android:layout_height="match_parent"
    android:id="@+id/rel_1">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/myBag"
        android:src="@drawable/hashmybag_big_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_edit"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/customername"
        android:inputType="textCapSentences"
        android:textColor="@color/white"
        android:layout_below="@id/myBag"
        android:textColorHint="#80ffffff"
        android:textColorHighlight="@color/colorDarkPink"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:imeOptions="actionNext"
        android:shadowColor="@color/colorBagRed"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_edit"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:layout_below="@id/name_edit"
        android:textColorHint="#80ffffff"
        android:textColorHighlight="@color/colorDarkPink"
        android:paddingLeft="10dp"
        android:imeOptions="actionNext"
        android:paddingRight="10dp"
        android:shadowColor="@color/colorBagRed"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone_edit"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/phone"
        android:inputType="number"
        android:maxLength="10"
        android:textColor="@color/white"
        android:layout_below="@id/email_edit"
        android:textColorHint="#80ffffff"
        android:textColorHighlight="@color/colorDarkPink"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:imeOptions="actionSend"
        android:shadowColor="@color/colorBagRed"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="13dp"
        android:layout_marginLeft="13dp"
        android:id="@+id/signupButton"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/phone_edit"
        android:text="@string/sign_up"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="center"
        android:imeOptions="actionSend"
        android:textColor="@color/colorDefaultWhite"
        android:background="@color/colorDarkPink"/>

</RelativeLayout>
