<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actionbar_layout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_arrow"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp"
            android:src="@mipmap/back_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/friend_name"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/black"
            android:text="@string/whislist"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/back_arrow"
            />

        <RelativeLayout
            android:background="@drawable/tab_shadow"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/back_arrow"
            android:textColor="#25000000"/>
    </RelativeLayout>

    <ScrollView

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/white"

        android:layout_below="@+id/actionbar_layout"
        android:layout_width="match_parent"
        android:layout_marginTop="2dp"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

         <RelativeLayout
             android:id="@+id/topper"
             android:paddingBottom="20dp"
             android:background="@drawable/btn_back"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
        <ImageView
        android:id="@+id/nike_image"
        android:src="@drawable/heart"
        android:layout_width="match_parent"
            android:scaleType="centerCrop"
        android:layout_height="200dp"
        />
    <RelativeLayout
        android:id="@+id/relative"
        android:layout_margin="10dp"
        android:layout_below="@+id/nike_image"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/name"
            android:text="@string/nike"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_marginLeft="@dimen/top_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/following"
            android:layout_alignParentRight="true"
            android:drawableLeft="@mipmap/plus"
            android:text="  Following"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/skyblue"
        android:id="@+id/relative1"
        android:padding="15dp"
        android:layout_below="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/products"
            android:textColor="@color/white"
            android:text="@string/products"
            android:layout_marginLeft="@dimen/top_margin"
            android:textStyle="bold"
            android:textSize="18dp"

            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ToggleButton
            android:id="@+id/toggle_alerts"
            android:layout_marginRight="10dp"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/toggle_selector"
            android:checked="true"
            android:text=""
            android:textOff=""
            android:textOn="" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="2dp"
        android:id="@+id/relative2"
        android:padding="15dp"
        android:background="@color/news_background"
        android:layout_below="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/news"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textSize="18dp"

            android:text="@string/news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ToggleButton
            android:id="@+id/toggle_alerts1"
            android:layout_marginRight="10dp"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/toggle_selector"
            android:checked="true"
            android:text=""
            android:textOff=""
            android:textOn=""/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="2dp"
        android:background="@color/green"
        android:id="@+id/relative3"
        android:padding="15dp"
        android:layout_below="@+id/relative2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/top_margin"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:id="@+id/offers"
            android:text="@string/offers"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ToggleButton
            android:id="@+id/toggle_alerts3"
            android:layout_marginRight="10dp"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/toggle_selector"
            android:checked="true"
            android:text=""
            android:textOff=""
            android:textOn="" />

    </RelativeLayout>


    <TextView
        android:id="@+id/address"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:layout_below="@+id/relative3"
        android:text="@string/user_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

         </RelativeLayout>
            <TextView
                android:id="@+id/similar_text"
                android:layout_below="@+id/topper"
                android:layout_marginTop="@dimen/top_margin"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:text="@string/similar_stores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/similar_store"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/similar_text"
        android:layout_width="match_parent"
        android:layout_height="100dp">

    </ListView>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
